--- a/styles/poster.css
+++ b/styles/poster.css
@@ -1,33 +1,24 @@
-body {
-    background: linear-gradient(45deg, rgb(2, 2, 2), rgb(53, 52, 52))
- }
- h1 {
-    text-align: center;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10VW;
-    margin: 10px;
-    text-shadow: 10px 10px 10px rgb(255, 123, 0);
-    filter: blur(1.5px);
-    transition: all 1s;
-    animation: change-color2 1s infinite alternate;
+.wrapper {
+    position: relative;
 }
-@keyframes change-color2 {
-    0% {color: rgb(212, 3, 212);}
-    50.5% {color: rgb(35, 14, 224);}
-    100.0% {color: rgb(37, 221, 20);}
+
+.background {
+    position: relative;
+    width: 500px;
+    height: 800px;
+    border: dashed;
+    margin-top: 30px;
+    margin-left: 20px;
+    z-index: 1;
 }
-h1:hover {
-    color: white;
-    filter: blur(0px);
-    text-shadow: 10px 10px 5px rgb(0, 0, 0);
-    transition: all 1s;
-    font-size: 12VW;
+.greenbox {
+    width: 300px;
+    height: 800px;
+    z-index: 2;
+    opacity: 0.9;
 }
-h2 { 
-    text-align: center;
-    color: rgb(255, 123, 0);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    margin: 20px;
+.goldbox {
+    width: 700px;
+    height: 450px;
+    z-index: 3;
 }
