--- a/styles/poster.css
+++ b/styles/poster.css
@@ -10,6 +10,7 @@
     margin-top: 30px;
     margin-left: 20px;
     z-index: 1;
+    background: blue;
 }
 .greenbox {
     position: absolute;
@@ -17,10 +18,12 @@
     height: 800px;
     z-index: 2;
     opacity: 0.9;
+    background: green;
 }
 .goldbox {
     position: absolute;
     width: 700px;
     height: 450px;
     z-index: 3;
+    background: gold;
 }
