--- a/styles/poster.css
+++ b/styles/poster.css
@@ -9,6 +9,7 @@
     border: dashed;
     margin-top: 30px;
     margin-left: 20px;
+    margin-bottom: 30px;
     z-index: 1;
     background: blue;
 }
