--- a/styles/poster.css
+++ b/styles/poster.css
@@ -1,3 +1,23 @@
+body {
+    background: linear-gradient(45deg, rgb(2, 2, 2), rgb(53, 52, 52))
+}
+ 
+ h1 {
+     text-align: center;
+     color: black;
+     font-family: Arial, Helvetica, sans-serif;
+     font-size: 10VW;
+     margin: 10px;
+     text-shadow: 10px 10px 10px rgb(255, 123, 0);
+     filter: blur(1.5px);
+    }
+ h2 { 
+        text-align: center;
+        color: rgb(255, 123, 0);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 27px;
+        margin: 20px;
+    }
 .wrapper {
     position: relative;
 }
