--- a/styles/poster.css
+++ b/styles/poster.css
@@ -26,12 +26,12 @@ body {
     position: relative;
     width: 500px;
     height: 800px;
-    border: dashed;
+    border: solid;
     margin-top: 30px;
     margin-left: 20px;
     margin-bottom: 30px;
     z-index: 1;
-    background: blue;
+    background: #b3a788;
 }
 .greenbox {
     position: absolute;
