--- a/styles/poster.css
+++ b/styles/poster.css
@@ -24,9 +24,10 @@ body {
 
 .background {
     position: relative;
-    width: 800px;
+    width: 600px;
     height: 800px;
     border: solid;
+    border-color: white;
     margin-top: 30px;
     margin-left: 20px;
     margin-bottom: 30px;
