--- a/styles/poster.css
+++ b/styles/poster.css
@@ -27,6 +27,7 @@ body {
     width: 1350px;
     height: 1900px;
     border: solid;
+    border-style: outset;
     border-color: white;
     margin-top: 30px;
     margin-left: 20px;
