--- a/styles/poster.css
+++ b/styles/poster.css
@@ -28,8 +28,8 @@ body {
     height: 1900px;
     border: solid;
     border-style: outset;
-    border-color: white;
-    border-width: 15px;
+    border-color: #ab9e7f;
+    border-width: 5px;
     margin-top: 30px;
     margin-left: 20px;
     margin-bottom: 30px;
@@ -38,14 +38,14 @@ body {
 }
 .greenbox {
     position: absolute;
-    width: 1225px;
-    height: 1800px;
+    width: 1100px;
+    height: 1600px;
     z-index: 2;
     opacity: 0.9;
     background: rgb(255, 123, 0);
-    top: 55px;
-    left: 90px;
-    border-radius: 15px;
+    top: 195px;
+    left: 135px;
+    border-radius: 100px;
 }
 .goldbox {
     position: absolute;
