--- a/styles/poster.css
+++ b/styles/poster.css
@@ -46,9 +46,14 @@ body {
     top: 195px;
     left: 135px;
     border-radius: 100px;
+    animation: width-animation2 1s infinite alternate;
 }
-.greenbox :hover {
-    filter: drop-shadow(rgb(255, 102, 0))
+@keyframes width-animation2 {
+    from {
+        width: 1100px;
+    } to {
+        width: 1115px;
+    }
 }
 .goldbox {
     position: absolute;
