--- a/styles/poster.css
+++ b/styles/poster.css
@@ -66,3 +66,10 @@ body {
     top: 00px;
     left: 1900px;
 }
+
+.stick img {
+    width: 50%;
+    display: flex;
+    margin: 1%;
+    box-shadow: 10px 10px 10px rgb(255, 123, 0);
+}
