--- a/styles/poster.css
+++ b/styles/poster.css
@@ -78,3 +78,11 @@ body {
 .stick img:hover {
     filter: drop-shadow(10px 10px 5px rgb(0, 0, 0));
 }
+
+.man img {
+    top: -1400px;
+    left: -7px;
+    position: relative;
+    z-index: 3;
+    width: 1100px;
+}
