--- a/styles/poster.css
+++ b/styles/poster.css
@@ -81,9 +81,10 @@ body {
 
 .whiplash {
     z-index: 5;
-    text-align: center;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10VW;
-    margin: 10px;
+    font-size: 2VW;
+    top: -2000px;
+    left: 900px;
+ 
 }
