--- a/styles/poster.css
+++ b/styles/poster.css
@@ -80,11 +80,9 @@ body {
 }
 
 .whiplash {
-    z-index: -1;
+    z-index: 5;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2VW;
-    top: -2000px;
-    left: 900px;
- 
+    font-size: 10VW;
+    margin: 10px;
 }
