--- a/styles/poster.css
+++ b/styles/poster.css
@@ -56,9 +56,6 @@ body {
     }
 }
 
-
-
-
 .stick img {
     top: -1400px;
     left: -7px;
@@ -80,9 +77,12 @@ body {
 }
 
 .whiplash {
+    top: -1400px;
+    left: -7px;
     z-index: 5;
-    color: black;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10VW;
+    font-size: 100px;
     margin: 10px;
+    text-align: center;
 }
