--- a/styles/poster.css
+++ b/styles/poster.css
@@ -78,12 +78,12 @@ body {
 
 .whiplash {
     position: relative;
-    top: -1400px;
-    left: -7px;
+    top: -1050px;
+    left: -1000px;
     z-index: 5;
-    color: white;
+    color:black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 100px;
+    font-size: 115px;
     margin: 10px;
     text-align: center;
 }
