--- a/styles/poster.css
+++ b/styles/poster.css
@@ -83,7 +83,7 @@ body {
     z-index: 5;
     color:black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 115px;
+    font: 115px;
     margin: 10px;
     text-align: center;
 }
