--- a/styles/poster.css
+++ b/styles/poster.css
@@ -81,7 +81,7 @@ body {
     top: -1050px;
     left: -1000px;
     z-index: 5;
-    color:black;
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
     font: 115px;
     margin: 10px;
