--- a/styles/poster.css
+++ b/styles/poster.css
@@ -77,13 +77,13 @@ body {
 }
 
 .whiplash {
-    position: relative;
-    top: -1050px;
-    left: -1000px;
+    position: absolute;
+    top: 750px;
+    left: 170px;
     z-index: 5;
-    color:white;
+    color:black;
     font-family: Arial, Helvetica, sans-serif;
-    font: 115px;
+    font-size: 100px;
     margin: 10px;
     text-align: center;
 }
